_Source/force-app/main/default/objects/Activity/fields/BI_Include_in_Executive_Weekly__c.field-meta.xml
<CustomField>
    <fullName>BI_Include_in_Executive_Weekly__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Executive Weekly is a SVP dashboard that shows activities for the last 7 days, based on the due date specified for the task, or the meeting start date, for an event. Only activities (tasks / events) with this checkbox checked, are included.</inlineHelpText>
    <label>Include in Executive Weekly</label>
    <type>Checkbox</type>
</CustomField>