_Source/force-app/main/default/objects/Activity/fields/BI_Key_Activity__c.field-meta.xml
<CustomField>
    <fullName>BI_Key_Activity__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box to include in activity reporting for sales leadership</inlineHelpText>
    <label>Key Activity</label>
    <type>Checkbox</type>
</CustomField>