_Source/force-app/main/default/objects/Activity/fields/BI_Objective__c.field-meta.xml
<CustomField>
    <fullName>BI_Objective__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Select the Objective that your Activity relates to.</inlineHelpText>
    <label>Objective</label>
    <referenceTo>BI_Objectives__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>