_Source/force-app/main/default/objects/Activity/fields/BI_Opportunity_Stage__c.field-meta.xml
<CustomField>
    <fullName>BI_Opportunity_Stage__c</fullName>
    <label>Opportunity Stage</label>
    <length>250</length>
    <type>Text</type>
</CustomField>