_Source/force-app/main/default/objects/Activity/fields/BI_Related_To_Object_Type__c.field-meta.xml
<CustomField>
    <fullName>BI_Related_To_Object_Type__c</fullName>
    <formula>CASE(
LEFT(WhatId, 3),
&apos;001&apos;, &quot;Account&quot;,
&apos;a1b&apos;, &quot;Objective&quot;,
&apos;006&apos;, &quot;Opportunity&quot;,
&apos;a0U&apos;, &quot;Account Plan&quot;,
&apos;a1f&apos;, &quot;Territory Plan&quot;,
&apos;00Q&apos;, &quot;Lead&quot;,
&apos;a2T&apos;, &quot;One-On-One&quot;,
&apos;a1d&apos;, &quot;Regional Plan&quot;,
&apos;a1X&apos;, &quot;Divisional Plan&quot;,
&apos;a2U&apos;, &quot;Project&quot;,
NULL, &quot;&quot;,
&quot;Other&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related To: Object Type</label>
    <type>Text</type>
</CustomField>