_Source/force-app/main/default/objects/Activity/fields/BI_Report_As__c.field-meta.xml
<CustomField>
    <fullName>BI_Report_As__c</fullName>
    <inlineHelpText>Key Activity  - any action or info to help leaders know what’s going on in your market and what’s driving successes/challenges with our accounts, or advances the sales process.  Accomplishment - an outcome or achievement to report to leadership</inlineHelpText>
    <label>Report As</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Key Activity</fullName>
            </value>
            <value>
                <fullName>Accomplishment</fullName>
            </value>
            <value>
                <fullName>Market Place / Competitive Intelligence</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>